2006-07-13  Ales Hakl  <ales at hakl dot net>

	* src/threads.c: Mutexes (non-working)

	* src/dfsch.c (dfsch_call_ec): Removed volatile (there is no
	reason for it to be there, probably)
	(dfsch_eval_proc_tr): dtto.

	* src/number.c (dfsch_number_to_string): added cast to number_t*

	* src/threads.c: Multithreading support (or something like that)

2006-06-18  Ales Hakl  <ales at hakl dot net>

	* dfsch/*.h: Added documentation comments

2006-06-11  Ales Hakl  <ales at hakl dot net>

	* dfsch/dfsch.h: Added documentation comments to argument macros

	* *: Removed all references of dfsch_make_string() and dfsch_string()

2006-06-07  Ales Hakl  <ales at hakl dot net>

	* dfsch/dfsch.h: Updated doxygen tags

2006-06-04  Ales Hakl  <ales at hakl dot net>

	* dfsch_list_length_check used almost anywhere where makes sense

	* src/strings.c (dfsch_list_2_string): use dfsch_list_length_check

	* src/dfsch.c (dfsch_list_length): Detect infinite lists
	(pair_write): Detect infinite lists
	(dfsch_list_length_check): Function with semantics similar to
	length in scheme - return length of given list, throw exception
	for anything else. Compiles now.
	(dfsch_list_2_vector): use dfsch_list_length_check

2006-06-03  Ales Hakl  <ales at hakl dot net>

	* src/number.c (dfsch_number_to_string): Number-specific write
	function
	(native_.*_2_.*): convert string to number and other way

2006-05-21  Ales Hakl  <ales at hakl dot net>

	* src/number.c: Rounding functions

2006-05-20  Ales Hakl  <ales at hakl dot net>

	* src/strings.c (dfsch_list_2_string): Fixed some warnings

	* src/dfsch.c: Fixed some warnings introduced by GC'd symbols
	Fixed some other warnings

	* src/parse.c (dispatch_atom): Allow numbers with leading +

	* src/dfsch.c: Fixed bug in string_hash
	(symbol_finalizer): GC'd symbols

2006-05-19  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_form_p): form? type predicate

	* dfsch/dfsch.h: Correct declarations in header for new list functions